# Yolov8_ByteTracker_cpp

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: inference.cpp.0D47C8524BD08172.idx  inference.h.46C7B1729C7C74CC.idx  main.cpp.90A8ADE9F04A4A5D.idx
include/: inference.h
include/ByteTrack/: BYTETracker.h  KalmanFilter.h  Object.h  Rect.h  STrack.h
src/: BYTETracker.cpp  Object.cpp  STrack.cpp  inference.cpp  main.cpp
